# my-app-sandbox

./: .replit  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  replit.md
app/: main.py
app/db/: session.py
app/services/: ai.py  artefacts.py  interviews.py  jobs.py
app/storage/: __init__.py  base.py  local.py  paths.py  provider.py
docs/: AI_READINESS.md  API_TOKENS_AND_CAPTURE.md  ARCHITECTURE.md  ARTEFACTS.md  ARTEFACT_AI_PLAN.md  AUTHENTICATION.md  DECISIONS.md  DELIVERY_PLAN.md  FIREFOX_EXTENSION.md  FOCUS.md  INBOX.md  JOBS_API.md  JOB_DETAIL.md  KANBAN_BOARD.md  PRODUCT_VISION.md  USER_PROFILE.md
docs/design/: DESIGN_SYSTEM.md
docs/product/: application_tracker_analysis_refresh.md  application_tracker_composite_product_vision.md  application_tracker_design_brief_refresh.md  application_tracker_inbox_monitoring_decision_memo.md  application_tracker_product_doc_set_index.md  application_tracker_strategic_vision.md
docs/ui/: application_tracker_ui_mockup_inspectable.html
extensions/firefox/: capture-page.js  options.html  options.js  popup.html  popup.js  styles.css
migrations/: README  env.py
migrations/versions/: 20260411_0001_baseline.py  20260418_0007_artefact_metadata_links.py  (+1 more)
project_tracker/: PUBLIC_SELF_HOSTED_ROADMAP.md
tests/: test_ai_service.py  test_artefact_routes.py  test_artefact_service.py  test_board_routes.py  test_capture_routes.py  test_database_baseline.py  test_firefox_extension.py  test_focus_routes.py  test_health.py  test_inbox_routes.py  test_job_detail_routes.py  test_job_routes.py  test_job_workspace_ui_contract.py  test_session_ui_routes.py  test_storage_paths.py
(+33 files in other folders)
